--- a/publication/genome-wide-genetic-changes-during-modern-breeding-of-maize/index.html
+++ b/publication/genome-wide-genetic-changes-during-modern-breeding-of-maize/index.html
@@ -1145,6 +1145,15 @@
 </section>
 
 
+<script src="https://utteranc.es/client.js"
+repo="wellionx/we5"
+issue-term="title"
+theme="github-light"
+crossorigin="anonymous"
+async>
+</script> 
+
+
 
 
 
